--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -21,10 +21,10 @@
 </section>
 
 <section>
-  <div class="container">
+  <div class="container2">
     <h2>Explore ProfileMe</h2>
     <p>ProfileMe is where you'll find quick access to James' portfolio.<br>Navigate through my pages as you please.</p>
-    <p><br>Click below to begin!</p>
+    <h3><br>Click below to begin!</h3>
     <a [routerLink]="['/about']">
       <img src="glass2.png" alt="Image 2">
     </a>
