--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -75,6 +75,21 @@ section img {
   padding: 10px;
 }
 
+.container2 {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 0px;
+
+  h3{
+    color: #333;
+  }
+
+  img {
+    max-width: 200px;
+    max-height: 200px;
+  }
+}
+
 .container_banner {
   background-image: url('banner3.png');
   background-position: center;
