--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -87,6 +87,12 @@ section img {
   img {
     max-width: 200px;
     max-height: 200px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+
+    &:hover {
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+      transform: scale(1.05);
+    }
   }
 }
 
