--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -130,7 +130,7 @@
           <h3>Services</h3>
           <p>Data Science</p>
           <p>Profile Builder</p>
-          <p>Applications</p>
+          <p>Web Applications</p>
         </div>
         <div class="footer-column">
           <h3>Contact</h3>
@@ -142,7 +142,7 @@
       <div class="footer-bottom">
         <p>&copy; 2024 ProfileMe™. All rights not reserved.</p>
         <!-- Personality likeness is of no genuine indication of figures or their opinions.</p> -->
-        <p>Data accuracy not guaranteed</p>
+        <!-- <p>Data accuracy not guaranteed</p> -->
         <p>
           <a href="#" class="footer-link" (click)="openPrivacyPolicyDialog($event)">Privacy Policy</a> |
           <a href="#" class="footer-link" (click)="openTermsServiceDialog($event)">Terms of Service</a>
